--- a/estilosportfolio.css
+++ b/estilosportfolio.css
@@ -47,16 +47,114 @@ a {
   font-weight: bold;
 }
 
-.container-portfolio {
+.joined-portfolio {
     width: 100%;
-    height: 600px;
-    background-color: #DB2511;
+    height: 300px;
+    background-color: #211d22;
     display: flex;
     place-content: center;
     align-items: center;
     position: relative;
+    background-size: cover;
 }
 
+.pancho-portfolio {
+    width: 100%;
+    height: 300px;
+    background-color:  #211d22;
+    display: flex;
+    place-content: center;
+    align-items: center;
+    position: relative;
+    background-size: cover;
+}
+
+.efevoo-portfolio {
+    width: 100%;
+    height: 300px;
+    background-color: #211d22;
+    display: flex;
+    place-content: center;
+    align-items: center;
+    position: relative;
+    background-size: cover;
+}
+
+.gnt-portfolio {
+    width: 100%;
+    height: 300px;
+    background-color: #211d22;
+    display: flex;
+    place-content: center;
+    align-items: center;
+    position: relative;
+    background-size: cover;
+}
+
+.kepler-portfolio {
+    width: 100%;
+    height: 300px;
+    background-color: #211d22;
+    display: flex;
+    place-content: center;
+    align-items: center;
+    position: relative;
+    background-size: cover;
+}
+
+.content-button {
+    background-color: #211d22;
+    border: none;
+    padding: 8px 26px;
+    color: #fff;
+    border-radius: 20px;
+    margin-top: 16px;
+    cursor: pointer;
+    transition: 0.3s;
+    white-space: nowrap;
+    color: white;
+}
+
+.content-button a {
+color: white;
+font-family: "Montserrat";
+font-weight: 300;
+}
+
+.container-portfolio {
+    width: 100%;
+    height: 400px;
+    display: flex;
+    place-content: center;
+    align-items: center;
+    position: relative;
+    background-size: cover;
+}
+
+hr {
+    margin: 3em 0;
+}
+
+.title-component {
+    font-size: 25px;
+    font-family: 'Roboto';
+    font-weight: 200;
+    color: #2d4754;
+    text-align: center;
+    margin-bottom: 25px;
+    font-weight: 600;
+}
+
+.component-bg {
+    background-color: #F3F3F3;
+    padding: 30px 0;
+}
+
+
+.bg {
+    background-color: #fff;
+    padding: 30px 0;
+}
 
 
 .banner-portfolio {
@@ -64,7 +162,6 @@ a {
     opacity: .4;
     width: 100%;
     height: 100%;
-    filter: blur(2.5px);
 
 }
 
@@ -207,6 +304,16 @@ a {
     font-weight: 800;
     color: #2d4754;
     margin-bottom: 10px;
+}
+
+.boldcenter {
+    font-size: 22px;
+    line-height: 1.3;
+    font-family: 'Roboto';
+    font-weight: 800;
+    color: #2d4754;
+    margin-bottom: 10px;
+    text-align: center;
 }
 
 .bold2 {
