new image route

--- a/estilos.css
+++ b/estilos.css
@@ -667,7 +667,7 @@ body {
 }
 
 .card--1 .card__img, .card--1 .card__img--hover {
-    background-image: url(/demo-images/gnt2.png);
+    background-image: url(ProductDesign/demo-images/gnt2.png);
     left: 0;
 }
 
