--- a/estilos.css
+++ b/estilos.css
@@ -657,18 +657,16 @@ a {
 
 body {
     min-height: 250vh;
-   
   }
 
-
 .cards {
-    width: 100%;
-    justify-content: center;
+  width: 100%;
+  justify-content: center;
 }
 
 .card--1 .card__img, .card--1 .card__img--hover {
-    background-image: url(/ProductDesign/demo-images/gnt2.png);
-    left: 0;
+  background-image: url(/ProductDesign/demo-images/gnt2.png);
+  left: 0;
 }
 
 .card--2 .card__img, .card--2 .card__img--hover {
@@ -703,14 +701,13 @@ body {
 
 .card__img {
   visibility: hidden;
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    width: 100%;
-    height: 295px;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  width: 100%;
+  height: 295px;
   border-top-left-radius: 12px;
-border-top-right-radius: 12px;
-  
+  border-top-right-radius: 12px;
 }
 
 .card__info-hover {
@@ -1253,8 +1250,6 @@ font-weight: 300;
 .btn-2 {
     background-image: linear-gradient(to right, #fbc2eb 0%, #a6c1ee 51%, #fbc2eb 100%);
   }
-
-
   .container-btn {
     display: flex;
     justify-content: center;
@@ -1267,8 +1262,7 @@ font-weight: 300;
   .btn {
     flex: 1 1 auto;
     margin: 10px;
-    padding: 30px;
-    text-align: center;
+    padding: 15px;
     text-transform: uppercase;
     transition: 0.5s;
     background-size: 200% auto;
@@ -1276,13 +1270,7 @@ font-weight: 300;
    /* text-shadow: 0px 0px 10px rgba(0,0,0,0.2);*/
     box-shadow: 0 0 20px #eee;
     border-radius: 10px;
-   }
-
-
-  
-  .btn {
     position: relative;
-    background: linear-gradient(136deg, #ffc5b3, #ffc3ab, #ffb2b2, #ffb5b5, #f9ac94);
     background-size: 400% 100%;
     text-transform: uppercase;
     font-weight: 700;
@@ -1290,12 +1278,11 @@ font-weight: 300;
     /* border-radius: 0.25em; */
     font-size: 13px;
     letter-spacing: 1px;
-    padding: 0;
     border-radius: 50px;
-    margin: 0;
     animation: Gradient 7s ease infinite;
     text-decoration: none;
-  }
+   }
+  
   
   .btn div {
     color: black;
@@ -1308,8 +1295,7 @@ font-weight: 300;
     position: relative;
     z-index: 1;
     mix-blend-mode: overlay;
-    font-family: 'Helvetica Neue';
-    
+    font-family: 'Helvetica Neue';   
   }
   
   @keyframes Gradient {
@@ -1328,7 +1314,8 @@ font-weight: 300;
     left: 0px;
     right: 0px;
     top: 2px;
-    height: 100%;
+    height: 50px;
     filter: blur(1rem);
+    z-index: -1;
   }
   
