--- a/estilos.css
+++ b/estilos.css
@@ -4,6 +4,9 @@
 html, body {
     height: 100%;
     overflow: hidden;
+    min-height:100%;
+    overflow-y:auto;
+    padding-bottom: 3rem;
   }
   
   body {
@@ -19,25 +22,21 @@ html, body {
       background-position: 0 0, -75px -75px, -75px -75px, 0 0, 0 0;
     }
   }
-  
-  
 
 .social-footer a{
-    font-size: 20px;
-    margin: 8px;
-    color: #afb3b8;
+  font-size: 20px;
+  margin: 8px;
+  color: #afb3b8;
 };
-
 
 body a:hover
 {
-    color: #685bd8;
+  color: #685bd8;
 }
 
-
 .wrapper {
-    margin: auto;
-    text-align: center;
+  margin: auto;
+  text-align: center;
 }
 
 .wrapper::after {
@@ -60,33 +59,21 @@ body a:hover
     animation: spin 2.5s linear infinite;
 }
   
-  @keyframes spin {
-    0% {
-      --rotate: 0deg;
-    }
-    100% {
-      --rotate: 360deg;
-    }
+@keyframes spin {
+  0% {
+    --rotate: 0deg;
+  }
+  100% {
+    --rotate: 360deg;
+  }
 }
-
 
 .wrapper-grid {
-    max-width: 960px;
-    margin: auto;
-    left: 0;
-    right: 0;
+  max-width: 960px;
+  margin: auto;
+  left: 0;
+  right: 0;
 }
-
-
-body {
-  min-height: 250vh;
-  align-items: center;
-  flex-direction: column;
-  padding-bottom: 2rem;
-  box-sizing: border-box;
-}
-
-
 
 a {
   color: #212534;
@@ -96,16 +83,13 @@ a {
 }
 
 .container-portfolio {
-    width: 100%;
-    height: 600px;
-    background-color: #DEDEDE;
-    display: flex;
-    align-items: center;
-    background-image: url(/demo-images/vinil.png);
+  width: 100%;
+  height: 600px;
+  background-color: #DEDEDE;
+  display: flex;
+  align-items: center;
+  background-image: url(/demo-images/vinil.png);
 }
-
-
-
 
 .image-portfolio-container {
     background-color: #4e00c2;
@@ -113,29 +97,27 @@ a {
 }
 
 .grid_one {
-    display: grid;
-    grid-template-columns: 562px 1fr;
-    grid-template-areas: "one last";
-    padding: 50px;
-    align-items: center;
+  display: grid;
+  grid-template-columns: 562px 1fr;
+  grid-template-areas: "one last";
+  padding: 50px;
+  align-items: center;
 }
 
 .one_first {
-    grid-area: one;
+  grid-area: one;
 }
 
 .one_last {
-    grid-area: last;
+  grid-area: last;
 }
 
-
-
 .texto {
-    font-size: 18px;
-    font-family: 'Roboto';
-    color: #2d4754;
-    margin-bottom: 10px;
-    line-height: 1.3;
+  font-size: 18px;
+  font-family: 'Roboto';
+  color: #2d4754;
+  margin-bottom: 10px;
+  line-height: 1.3;
 }
 
 .subtitle {
@@ -148,32 +130,28 @@ a {
 }
 
 .title3 {
-        font-size: 30px;
-        font-family: 'Roboto';
-        font-weight: 200;
-        color: #2d4754;
-        margin: 7px 0;
+  font-size: 30px;
+  font-family: 'Roboto';
+  font-weight: 200;
+  color: #2d4754;
+  margin: 7px 0;
 }
 
 .bold {
-    font-size: 22px;
-    line-height: 1.3;
-    font-family: 'Roboto';
-    font-weight: 800;
-    color: #2d4754;
-    margin-bottom: 10px;
+  font-size: 22px;
+  line-height: 1.3;
+  font-family: 'Roboto';
+  font-weight: 800;
+  color: #2d4754;
+  margin-bottom: 10px;
 }
-
 
 .bold2 {
-    font-size: 17px;
-    font-family: 'Roboto';
-    font-weight: 800;
-    color: #2d4754;
+  font-size: 17px;
+  font-family: 'Roboto';
+  font-weight: 800;
+  color: #2d4754;
 }
-
-
-
 
 .header {
     background-color: #fff;
@@ -635,7 +613,6 @@ a {
     }
 }
 
-
 .card {
     border-radius: 0.25rem;
     display: flex;
@@ -654,10 +631,6 @@ a {
 *{
   box-sizing: border-box;
 }
-
-body {
-    min-height: 250vh;
-  }
 
 .cards {
   width: 100%;
@@ -873,7 +846,7 @@ margin-bottom: 0px;
   .button2 {
     display: inline-block;
     font-size: 1.5em;
-        margin: .5em;
+    margin: .5em;
     padding: .5em;
     border-radius: 5px;
     transition: all .5s;
@@ -930,14 +903,10 @@ a.btn {
 /* RESPONSIVE PART */
 
 @media screen and (max-width: 1600px) {
-
     .content-1170
     {
         max-width: 90%;
     }
-
-    
-
 
     .content-970, .single-post .site-content
     {
@@ -962,8 +931,6 @@ a.btn {
          "one one two"
         "four four four";       
     }
-
-
 }
 
 @media screen and (max-width: 1220px) {
@@ -978,7 +945,6 @@ a.btn {
          "one one two"
         "four four four";       
     }
-
 }
 
 @media screen and (max-width: 1066px) {
