--- a/estilosportfolio.css
+++ b/estilosportfolio.css
@@ -135,13 +135,38 @@ a.btn {
 
 .kepler-portfolio {
     width: 100%;
-    height: 300px;
+    height: 500px;
     background-color: #211d22;
     display: flex;
     place-content: center;
     align-items: center;
     position: relative;
     background-size: cover;
+    background-image: url('/demo-images/keplerbanner.png');
+}
+
+.peninsula-portfolio {
+    width: 100%;
+    height: 500px;
+    background-color: #211d22;
+    display: flex;
+    place-content: center;
+    align-items: center;
+    position: relative;
+    background-size: cover;
+    background-image: url('/demo-images/peninsulabanner.png');
+}
+
+.primeraplus-portfolio {
+    width: 100%;
+    height: 500px;
+    background-color: #211d22;
+    display: flex;
+    place-content: center;
+    align-items: center;
+    position: relative;
+    background-size: cover;
+    background-image: url('/demo-images/primeraplusbanner.png');
 }
 
 .btn {
@@ -195,7 +220,7 @@ a.btn {
     padding: 8px 26px;
     color: #fff;
     border-radius: 20px;
-    margin-top: 16px;
+    margin-top: 5px;
     cursor: pointer;
     transition: 0.3s;
     white-space: nowrap;
@@ -257,19 +282,24 @@ hr {
 }
 
 .grid_one {
-    display: grid;
-    grid-template-columns: 562px 1fr;
-    grid-template-areas: "one last";
-    padding: 50px;
-    align-items: center;
+    display: flex;
+    flex-direction: column;
 }
 
 .one_first {
-    grid-area: one;
+    margin-bottom: 100px;
+    margin-top: 100px;
 }
 
 .one_last {
     grid-area: last;
+    margin-bottom: 100px;
+    margin-top: 100px;
+}
+
+.text-wrapper { 
+    display: flex;
+    gap: 40px;
 }
 
 .texto {
@@ -277,7 +307,7 @@ hr {
     font-family: 'Roboto';
     color: #2d4754;
     margin-bottom: 10px;
-    line-height: 1.3;
+    line-height: 30px;
 }
 
 .textofooter {
@@ -338,6 +368,14 @@ hr {
 
 .title3 {
     font-size: 30px;
+    font-family: 'Roboto';
+    font-weight: 200;
+    color: #2d4754;
+    margin: 7px 0;
+}
+
+.title4 {
+    font-size: 25px;
     font-family: 'Roboto';
     font-weight: 200;
     color: #2d4754;
@@ -682,11 +720,8 @@ body {
     }
 
     .grid_one {
-        display: grid;
-        grid-template-columns: 406px 1fr;
-        grid-template-areas: "one last";
-        align-items: center;
-        padding: 20px;
+        display: flex;
+        flex-direction: column;
     }
 }
 
@@ -799,12 +834,9 @@ body {
         }
     
     .grid_one {
-            display: grid;
-            grid-template-columns: 233px 1fr;
-            grid-template-areas: "one last";
-            align-items: center;
-            padding: 20px;
-        }
+        display: flex;
+        flex-direction: column;
+    }
 
         .extraimgscontainer {
             display: flex;
@@ -834,8 +866,6 @@ body {
     .grid_one {
         display: flex;
         flex-direction: column;
-        padding: 20px;
-        text-align: center;
     }
 }
 
