--- a/estilosportfolio.css
+++ b/estilosportfolio.css
@@ -154,7 +154,7 @@ a.btn {
     align-items: center;
     position: relative;
     background-size: cover;
-    background-image: url('/demo-images/peninsulabanner.png');
+    background-image: url(/ProductDesign2022/demo-images/peninsulabanner.png);
 }
 
 .primeraplus-portfolio {
@@ -166,7 +166,7 @@ a.btn {
     align-items: center;
     position: relative;
     background-size: cover;
-    background-image: url('/demo-images/primeraplusbanner.png');
+    background-image: url('/ProductDesign2022/demo-images/primeraplusbanner.png');
 }
 
 .btn {
